@@ -4,6 +4,11 @@ Changes from Ant 1.7.0RC1 to current SVN version
 Changes that could break older environments:
 -------------------------------------------
 
+* Initial support for JDK6 scripting <script>.
+  <*script*> will now use javax.scripting if bsf is
+  not available, or if explicilty requested by using
+  a "manager" attribute.
+
 Fixed bugs:
 -----------
 * Directory deletion did not work properly.
